--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
           <a href="#" class="nav-logo"
             ><span class="logo-style">Web</span>Studio</a
           >
-
           <ul class="site-nav list">
             <li class="site-nav-item">
               <a href="#" class="site-nav-link current">Студия</a>
@@ -38,14 +37,19 @@
 
         <ul class="auth-nav list">
           <li class="auth-nav-item">
-            <a href="mailto:info@devstudio.com" class="auth-nav-link"
-              >info@devstudio.com</a
-            >
+            <svg class="auth-nav-icon" width="16" height="12px"> 
+              <use href="../images/icon.svg#icon-email"></use>
+            </svg>
+             <a href="mailto:info@devstudio.com" class="auth-nav-link"
+              >info@devstudio.com</a>            
           </li>
           <li class="auth-nav-item">
+            <svg class="auth-nav-icon" width="10" height="16px"> 
+              <use href="../images/icon.svg#icon-phone"></use>
+            </svg>
             <a href="tel:+380961111111" class="auth-nav-link"
-              >+38 096 111 11 11</a
-            >
+              >+38 096 111 11 11
+            </a>            
           </li>
         </ul>
       </div>
@@ -66,6 +70,9 @@
           <h2 class="hidden">Преимущества</h2>
           <ul class="features-list list">
             <li class="features-item">
+              <svg class="features-icon"> 
+                <use href="../images/icon.svg#icon-antenna"></use>
+              </svg>
               <h3 class="features-title">Внимание к деталям</h3>
               <p class="features-text">
                 Идейные соображения, а также начало повседневной работы по
@@ -73,6 +80,9 @@
               </p>
             </li>
             <li class="features-item">
+              <svg class="features-icon"> 
+                <use href="../images/icon.svg#icon-clock"></use>
+              </svg>
               <h3 class="features-title">Пунктуальность</h3>
               <p class="features-text">
                 Задача организации, в особенности же рамки и место обучения
@@ -80,6 +90,9 @@
               </p>
             </li>
             <li class="features-item">
+                <svg class="features-icon"> 
+                  <use href="../images/icon.svg#icon-diagram"></use>
+                </svg>
               <h3 class="features-title">Планирование</h3>
               <p class="features-text">
                 Равным образом консультация с широким активом в значительной
@@ -87,6 +100,9 @@
               </p>
             </li>
             <li class="features-item">
+              <svg class="features-icon"> 
+                <use href="../images/icon.svg#icon-astronaut"></use>
+              </svg>
               <h3 class="features-title">Современные технологии</h3>
               <p class="features-text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -128,6 +144,36 @@
                 <h3 class="team-title">Игорь Демьяненко</h3>
                 <p lang="en" class="team-text">Product Designer</p>
               </div>
+            <ul class="social-media list"> 
+              <li>
+                <a class="social-media-link">
+                  <svg class="social-media-icon"> 
+                    <use href="../images/icon.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li> 
+                <a class="social-media-link">
+                  <svg class="social-media-icon"> 
+                    <use href="../images/icon.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+            <li>
+            <a class="social-media-link">
+              <svg class="social-media-icon"> 
+                <use href="../images/icon.svg#icon-facebook"></use>
+              </svg>
+            </a>
+           </li>
+          <li>
+            <a class="social-media-link">
+              <svg class="social-media-icon"> 
+                <use href="../images/icon.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+            </ul>
             </li>
             <li class="team-item">
               <img src="./images/team2.jpg" alt="Ольга Репина" width="270" />
@@ -135,6 +181,36 @@
                 <h3 class="team-title">Ольга Репина</h3>
                 <p lang="en" class="team-text">Frontend Developerr</p>
               </div>
+              <ul class="social-media list"> 
+                <li>
+                  <a class="social-media-link">
+                    <svg class="social-media-icon"> 
+                      <use href="../images/icon.svg#icon-instagram" ></use>
+                    </svg>
+                  </a>
+                </li>
+                <li> 
+                  <a class="social-media-link">
+                    <svg class="social-media-icon"> 
+                      <use href="../images/icon.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+              <li>
+              <a class="social-media-link">
+                <svg class="social-media-icon"> 
+                  <use href="../images/icon.svg#icon-facebook"></use>
+                </svg>
+              </a>
+             </li>
+            <li>
+              <a class="social-media-link">
+                <svg class="social-media-icon"> 
+                  <use href="../images/icon.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+              </ul>
             </li>
             <li class="team-item">
               <img src="./images/team3.jpg" alt="Николай Тарасов" width="270" />
@@ -142,6 +218,36 @@
                 <h3 class="team-title">Николай Тарасов</h3>
                 <p lang="en" class="team-text">Marketing</p>
               </div>
+              <ul class="social-media list"> 
+                <li>
+                  <a class="social-media-link">
+                    <svg class="social-media-icon"> 
+                      <use href="../images/icon.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li> 
+                  <a class="social-media-link">
+                    <svg class="social-media-icon"> 
+                      <use href="../images/icon.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+              <li>
+              <a class="social-media-link">
+                <svg class="social-media-icon"> 
+                  <use href="../images/icon.svg#icon-facebook"></use>
+                </svg>
+              </a>
+             </li>
+            <li>
+              <a class="social-media-link">
+                <svg class="social-media-icon"> 
+                  <use href="../images/icon.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+              </ul>
             </li>
             <li class="team-item">
               <img src="./images/team4.jpg" alt="Михаил Ермаков" width="270" />
@@ -149,6 +255,88 @@
                 <h3 class="team-title">Михаил Ермаков</h3>
                 <p lang="en" class="team-text">UI Designer</p>
               </div>
+              <ul class="social-media list"> 
+                <li>
+                  <a class="social-media-link">
+                    <svg class="social-media-icon"> 
+                      <use href="../images/icon.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li> 
+                  <a class="social-media-link">
+                    <svg class="social-media-icon"> 
+                      <use href="../images/icon.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+              <li>
+              <a class="social-media-link">
+                <svg class="social-media-icon"> 
+                  <use href="../images/icon.svg#icon-facebook"></use>
+                </svg>
+              </a>
+             </li>
+            <li>
+              <a class="social-media-link">
+                <svg class="social-media-icon"> 
+                  <use href="../images/icon.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="section">
+        <div class="container">
+          <h2 class="section-title">
+            Постоянные клиенты
+          </h2>
+          <ul class="clients-list list">
+            <li>
+              <button class="clients-button">
+                <svg class="clients-icon">
+                  <use href="../images/icon.svg#icon-client1"></use>
+                </svg>
+              </button>
+            </li>
+            <li>
+              <button class="clients-button">
+                <svg class="clients-icon">
+                  <use href="../images/icon.svg#icon-client2"></use>
+                </svg>
+              </button>
+            </li>
+            <li>
+              <button class="clients-button">
+                <svg class="clients-icon">
+                  <use href="../images/icon.svg#icon-client3"></use>
+                </svg>
+              </button>
+            </li>
+            <li>
+              <button class="clients-button">
+                <svg class="clients-icon">
+                  <use href="../images/icon.svg#icon-client4"></use>
+                </svg>
+              </button>
+            </li>
+            <li>
+              <button class="clients-button">
+                <svg class="clients-icon">
+                  <use href="../images/icon.svg#icon-client5"></use>
+                </svg>
+              </button>
+            </li>
+            <li>
+              <button class="clients-button">
+                <svg class="clients-icon">
+                  <use href="../images/icon.svg#icon-client6"></use>
+                </svg>
+              </button>
             </li>
           </ul>
         </div>
@@ -156,14 +344,15 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
-        <a href="#" class="nav-logo"
+      <div class="container position">
+        <div class="location">
+          <a href="#" class="nav-logo"
           ><span class="logo-style">Web</span
           ><span class="secondary-logo">Studio</span></a
         >
 
-        <address class="address">
-          <ul class="list">
+        <address>
+          <ul class="address list">
             <li><p class="address-text">г. Киев, пр-т Леси Украинки, 26</p></li>
             <li class="address-item">
               <a href="mailto:info@devstudio.com" class="address-link"
@@ -177,6 +366,42 @@
             </li>
           </ul>
         </address>
+        </div>
+
+        <div class="network">
+          <p class="network-text">присоединяйтесь</p>
+          <ul class="network-list list"> 
+            <li>
+              <a class="network-link">
+                <svg class="network-icon"> 
+                  <use href="../images/icon.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li> 
+              <a class="network-link">
+                <svg class="network-icon"> 
+                  <use href="../images/icon.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+          <li>
+          <a class="network-link">
+            <svg class="network-icon"> 
+              <use href="../images/icon.svg#icon-facebook"></use>
+            </svg>
+          </a>
+         </li>
+        <li>
+          <a class="network-link">
+            <svg class="network-icon"> 
+              <use href="../images/icon.svg#icon-linkedin"></use>
+            </svg>
+          </a>
+        </li>
+          </ul>
+        </div>
+        
       </div>
     </footer>
   </body>
