--- a/portfolio.html
+++ b/portfolio.html
@@ -38,14 +38,19 @@
 
           <ul class="auth-nav list">
             <li class="auth-nav-item">
-              <a href="mailto:info@devstudio.com" class="auth-nav-link"
-                >info@devstudio.com</a
-              >
+              <svg class="auth-nav-icon" width="16" height="12px"> 
+                <use href="../images/icon.svg#icon-email"></use>
+              </svg>
+               <a href="mailto:info@devstudio.com" class="auth-nav-link"
+                >info@devstudio.com</a>            
             </li>
             <li class="auth-nav-item">
+              <svg class="auth-nav-icon" width="10" height="16px"> 
+                <use href="../images/icon.svg#icon-phone"></use>
+              </svg>
               <a href="tel:+380961111111" class="auth-nav-link"
-                >+38 096 111 11 11</a
-              >
+                >+38 096 111 11 11
+              </a>            
             </li>
           </ul>
         </nav>
@@ -182,8 +187,9 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
-        <a href="#" class="nav-logo"
+      <div class="container position">
+        <div class="location">
+          <a href="#" class="nav-logo"
           ><span class="logo-style">Web</span
           ><span class="secondary-logo">Studio</span></a
         >
@@ -203,6 +209,42 @@
             </li>
           </ul>
         </address>
+        </div>
+
+        <div class="network">
+          <p class="network-text">присоединяйтесь</p>
+          <ul class="network-list list"> 
+            <li>
+              <a class="network-link">
+                <svg class="network-icon"> 
+                  <use href="../images/icon.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li> 
+              <a class="network-link">
+                <svg class="network-icon"> 
+                  <use href="../images/icon.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+          <li>
+          <a class="network-link">
+            <svg class="network-icon"> 
+              <use href="../images/icon.svg#icon-facebook"></use>
+            </svg>
+          </a>
+         </li>
+        <li>
+          <a class="network-link">
+            <svg class="network-icon"> 
+              <use href="../images/icon.svg#icon-linkedin"></use>
+            </svg>
+          </a>
+        </li>
+          </ul>
+        </div>
+        
       </div>
     </footer>
   </body>
