--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
         <ul class="auth-nav list">
           <li class="auth-nav-item">
             <svg class="auth-nav-icon" width="16" height="12px"> 
-              <use href="../images/icon.svg#icon-email"></use>
+              <use href="./images/icon.svg#icon-email"></use>
             </svg>
              <a href="mailto:info@devstudio.com" class="auth-nav-link"
               >info@devstudio.com</a>            
           </li>
           <li class="auth-nav-item">
             <svg class="auth-nav-icon" width="10" height="16px"> 
-              <use href="../images/icon.svg#icon-phone"></use>
+              <use href="./images/icon.svg#icon-phone"></use>
             </svg>
             <a href="tel:+380961111111" class="auth-nav-link"
               >+38 096 111 11 11
@@ -71,7 +71,7 @@
           <ul class="features-list list">
             <li class="features-item">
               <svg class="features-icon"> 
-                <use href="../images/icon.svg#icon-antenna"></use>
+                <use href="./images/icon.svg#icon-antenna"></use>
               </svg>
               <h3 class="features-title">Внимание к деталям</h3>
               <p class="features-text">
@@ -81,7 +81,7 @@
             </li>
             <li class="features-item">
               <svg class="features-icon"> 
-                <use href="../images/icon.svg#icon-clock"></use>
+                <use href="./images/icon.svg#icon-clock"></use>
               </svg>
               <h3 class="features-title">Пунктуальность</h3>
               <p class="features-text">
@@ -91,7 +91,7 @@
             </li>
             <li class="features-item">
                 <svg class="features-icon"> 
-                  <use href="../images/icon.svg#icon-diagram"></use>
+                  <use href="./images/icon.svg#icon-diagram"></use>
                 </svg>
               <h3 class="features-title">Планирование</h3>
               <p class="features-text">
@@ -101,7 +101,7 @@
             </li>
             <li class="features-item">
               <svg class="features-icon"> 
-                <use href="../images/icon.svg#icon-astronaut"></use>
+                <use href="./images/icon.svg#icon-astronaut"></use>
               </svg>
               <h3 class="features-title">Современные технологии</h3>
               <p class="features-text">
@@ -148,28 +148,28 @@
               <li>
                 <a class="social-media-link">
                   <svg class="social-media-icon"> 
-                    <use href="../images/icon.svg#icon-instagram"></use>
+                    <use href="./images/icon.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li> 
                 <a class="social-media-link">
                   <svg class="social-media-icon"> 
-                    <use href="../images/icon.svg#icon-twitter"></use>
+                    <use href="./images/icon.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
             <li>
             <a class="social-media-link">
               <svg class="social-media-icon"> 
-                <use href="../images/icon.svg#icon-facebook"></use>
+                <use href="./images/icon.svg#icon-facebook"></use>
               </svg>
             </a>
            </li>
           <li>
             <a class="social-media-link">
               <svg class="social-media-icon"> 
-                <use href="../images/icon.svg#icon-linkedin"></use>
+                <use href="./images/icon.svg#icon-linkedin"></use>
               </svg>
             </a>
           </li>
@@ -185,28 +185,28 @@
                 <li>
                   <a class="social-media-link">
                     <svg class="social-media-icon"> 
-                      <use href="../images/icon.svg#icon-instagram" ></use>
+                      <use href="./images/icon.svg#icon-instagram" ></use>
                     </svg>
                   </a>
                 </li>
                 <li> 
                   <a class="social-media-link">
                     <svg class="social-media-icon"> 
-                      <use href="../images/icon.svg#icon-twitter"></use>
+                      <use href="./images/icon.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
               <li>
               <a class="social-media-link">
                 <svg class="social-media-icon"> 
-                  <use href="../images/icon.svg#icon-facebook"></use>
+                  <use href="./images/icon.svg#icon-facebook"></use>
                 </svg>
               </a>
              </li>
             <li>
               <a class="social-media-link">
                 <svg class="social-media-icon"> 
-                  <use href="../images/icon.svg#icon-linkedin"></use>
+                  <use href="./images/icon.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
@@ -222,28 +222,28 @@
                 <li>
                   <a class="social-media-link">
                     <svg class="social-media-icon"> 
-                      <use href="../images/icon.svg#icon-instagram"></use>
+                      <use href="./images/icon.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li> 
                   <a class="social-media-link">
                     <svg class="social-media-icon"> 
-                      <use href="../images/icon.svg#icon-twitter"></use>
+                      <use href="./images/icon.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
               <li>
               <a class="social-media-link">
                 <svg class="social-media-icon"> 
-                  <use href="../images/icon.svg#icon-facebook"></use>
+                  <use href="./images/icon.svg#icon-facebook"></use>
                 </svg>
               </a>
              </li>
             <li>
               <a class="social-media-link">
                 <svg class="social-media-icon"> 
-                  <use href="../images/icon.svg#icon-linkedin"></use>
+                  <use href="./images/icon.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
@@ -259,28 +259,28 @@
                 <li>
                   <a class="social-media-link">
                     <svg class="social-media-icon"> 
-                      <use href="../images/icon.svg#icon-instagram"></use>
+                      <use href="./images/icon.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li> 
                   <a class="social-media-link">
                     <svg class="social-media-icon"> 
-                      <use href="../images/icon.svg#icon-twitter"></use>
+                      <use href="./images/icon.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
               <li>
               <a class="social-media-link">
                 <svg class="social-media-icon"> 
-                  <use href="../images/icon.svg#icon-facebook"></use>
+                  <use href="./images/icon.svg#icon-facebook"></use>
                 </svg>
               </a>
              </li>
             <li>
               <a class="social-media-link">
                 <svg class="social-media-icon"> 
-                  <use href="../images/icon.svg#icon-linkedin"></use>
+                  <use href="./images/icon.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
@@ -299,42 +299,42 @@
             <li>
               <button class="clients-button">
                 <svg class="clients-icon">
-                  <use href="../images/icon.svg#icon-client1"></use>
+                  <use href="./images/icon.svg#icon-client1"></use>
                 </svg>
               </button>
             </li>
             <li>
               <button class="clients-button">
                 <svg class="clients-icon">
-                  <use href="../images/icon.svg#icon-client2"></use>
+                  <use href="./images/icon.svg#icon-client2"></use>
                 </svg>
               </button>
             </li>
             <li>
               <button class="clients-button">
                 <svg class="clients-icon">
-                  <use href="../images/icon.svg#icon-client3"></use>
+                  <use href="./images/icon.svg#icon-client3"></use>
                 </svg>
               </button>
             </li>
             <li>
               <button class="clients-button">
                 <svg class="clients-icon">
-                  <use href="../images/icon.svg#icon-client4"></use>
+                  <use href="./images/icon.svg#icon-client4"></use>
                 </svg>
               </button>
             </li>
             <li>
               <button class="clients-button">
                 <svg class="clients-icon">
-                  <use href="../images/icon.svg#icon-client5"></use>
+                  <use href="./images/icon.svg#icon-client5"></use>
                 </svg>
               </button>
             </li>
             <li>
               <button class="clients-button">
                 <svg class="clients-icon">
-                  <use href="../images/icon.svg#icon-client6"></use>
+                  <use href="./images/icon.svg#icon-client6"></use>
                 </svg>
               </button>
             </li>
@@ -374,28 +374,28 @@
             <li>
               <a class="network-link">
                 <svg class="network-icon"> 
-                  <use href="../images/icon.svg#icon-instagram"></use>
+                  <use href="./images/icon.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li> 
               <a class="network-link">
                 <svg class="network-icon"> 
-                  <use href="../images/icon.svg#icon-twitter"></use>
+                  <use href="./images/icon.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
           <li>
           <a class="network-link">
             <svg class="network-icon"> 
-              <use href="../images/icon.svg#icon-facebook"></use>
+              <use href="./images/icon.svg#icon-facebook"></use>
             </svg>
           </a>
          </li>
         <li>
           <a class="network-link">
             <svg class="network-icon"> 
-              <use href="../images/icon.svg#icon-linkedin"></use>
+              <use href="./images/icon.svg#icon-linkedin"></use>
             </svg>
           </a>
         </li>
