--- a/portfolio.html
+++ b/portfolio.html
@@ -38,18 +38,19 @@
 
           <ul class="auth-nav list">
             <li class="auth-nav-item">
-              <svg class="auth-nav-icon" width="16" height="12px"> 
-                <use href="../images/icon.svg#icon-email"></use>
-              </svg>
                <a href="mailto:info@devstudio.com" class="auth-nav-link"
-                >info@devstudio.com</a>            
+                >info@devstudio.com
+                <svg class="auth-nav-icon" width="16" height="12px"> 
+                  <use href="./images/icon.svg#icon-email"></use>
+                </svg>
+              </a>            
             </li>
             <li class="auth-nav-item">
-              <svg class="auth-nav-icon" width="10" height="16px"> 
-                <use href="../images/icon.svg#icon-phone"></use>
-              </svg>
               <a href="tel:+380961111111" class="auth-nav-link"
                 >+38 096 111 11 11
+                <svg class="auth-nav-icon" width="10" height="16px"> 
+                  <use href="./images/icon.svg#icon-phone"></use>
+                </svg>
               </a>            
             </li>
           </ul>
@@ -217,28 +218,28 @@
             <li>
               <a class="network-link">
                 <svg class="network-icon"> 
-                  <use href="../images/icon.svg#icon-instagram"></use>
+                  <use href="./images/icon.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li> 
               <a class="network-link">
                 <svg class="network-icon"> 
-                  <use href="../images/icon.svg#icon-twitter"></use>
+                  <use href="./images/icon.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
           <li>
           <a class="network-link">
             <svg class="network-icon"> 
-              <use href="../images/icon.svg#icon-facebook"></use>
+              <use href="./images/icon.svg#icon-facebook"></use>
             </svg>
           </a>
          </li>
         <li>
           <a class="network-link">
             <svg class="network-icon"> 
-              <use href="../images/icon.svg#icon-linkedin"></use>
+              <use href="./images/icon.svg#icon-linkedin"></use>
             </svg>
           </a>
         </li>
