--- a/index.html
+++ b/index.html
@@ -37,18 +37,19 @@
 
         <ul class="auth-nav list">
           <li class="auth-nav-item">
-            <svg class="auth-nav-icon" width="16" height="12px"> 
-              <use href="./images/icon.svg#icon-email"></use>
-            </svg>
-             <a href="mailto:info@devstudio.com" class="auth-nav-link"
-              >info@devstudio.com</a>            
+             <a href="mailto:info@devstudio.com" class="auth-nav-link">
+              <svg class="auth-nav-icon" width="16" height="12px"> 
+                <use href="./images/icon.svg#icon-email"></use>
+              </svg>
+              info@devstudio.com
+            </a>            
           </li>
           <li class="auth-nav-item">
-            <svg class="auth-nav-icon" width="10" height="16px"> 
-              <use href="./images/icon.svg#icon-phone"></use>
-            </svg>
-            <a href="tel:+380961111111" class="auth-nav-link"
-              >+38 096 111 11 11
+            <a href="tel:+380961111111" class="auth-nav-link">
+              <svg class="auth-nav-icon" width="10" height="16px"> 
+                <use href="./images/icon.svg#icon-phone"></use>
+              </svg>
+              +38 096 111 11 11
             </a>            
           </li>
         </ul>
