виправлено header, features, footer

--- a/portfolio.html
+++ b/portfolio.html
@@ -83,7 +83,8 @@
 
           <ul class="cardset-list list">
             <li class="cardset-item">
-              <img
+              <a class=cardset-link>
+                <img
                 src="./images/portfolio1.jpg"
                 alt="Технокряк"
                 class="cardset-img"
@@ -91,10 +92,12 @@
               <div class="cardset-description">
                 <h2 class="cardset-title">Технокряк</h2>
                 <p class="cardset-text">Веб-сайты</p>
-              </div>
+              </div> </a>
             </li>
+            
             <li class="cardset-item">
-              <img
+              <a class=cardset-link>
+                <img
                 src="./images/portfolio2.jpg"
                 alt="Постер New Orlean vs Golden Star"
                 class="cardset-img"
@@ -102,9 +105,11 @@
               <div class="cardset-description">
                 <h2 class="cardset-title">Постер New Orlean vs Golden Star</h2>
                 <p class="cardset-text">Дизайн</p>
-              </div>
+              </div> </a>
             </li>
+
             <li class="cardset-item">
+              <a class=cardset-link> </a>
               <img
                 src="./images/portfolio3.jpg"
                 alt="Ресторан Seafood"
@@ -115,8 +120,10 @@
                 <p class="cardset-text">Приложение</p>
               </div>
             </li>
+
             <li class="cardset-item">
-              <img
+              <a class=cardset-link> 
+                <img
                 src="./images/portfolio4.jpg"
                 alt="Проект Prime"
                 class="cardset-img"
@@ -125,9 +132,12 @@
                 <h2 class="cardset-title">Проект Prime</h2>
                 <p class="cardset-text">Маркетинг</p>
               </div>
+              </a>
             </li>
+
             <li class="cardset-item">
-              <img
+              <a class=cardset-link> 
+                <img
                 src="./images/portfolio5.jpg"
                 alt="Проект Boxes"
                 class="cardset-img"
@@ -136,9 +146,11 @@
                 <h2 class="cardset-title">Проект Boxes</h2>
                 <p class="cardset-text">Приложение</p>
               </div>
+              </a>
             </li>
             <li class="cardset-item">
-              <img
+              <a class=cardset-link> 
+                <img
                 src="./images/portfolio6.jpg"
                 alt="Inspiration has no Borders"
                 class="cardset-img"
@@ -147,9 +159,12 @@
                 <h2 class="cardset-title">Inspiration has no Bordersr</h2>
                 <p class="cardset-text">Веб-сайт</p>
               </div>
+              </a>
             </li>
+
             <li class="cardset-item">
-              <img
+              <a class=cardset-link> 
+                <img
                 src="./images/portfolio7.jpg"
                 alt="Издание Limited Edition"
                 class="cardset-img"
@@ -158,10 +173,12 @@
                 <h2 class="cardset-title">Издание Limited Edition</h2>
                 <p class="cardset-text">Дизайн</p>
               </div>
+              </a>
             </li>
 
             <li class="cardset-item">
-              <img
+              <a class=cardset-link> 
+                <img
                 src="./images/portfolio8.jpg"
                 alt="Проект LAB"
                 class="cardset-img"
@@ -170,9 +187,12 @@
                 <h2 class="cardset-title">Проект LAB</h2>
                 <p class="cardset-text">Маркетинг</p>
               </div>
+              </a>
+
             </li>
             <li class="cardset-item">
-              <img
+              <a class=cardset-link> 
+                <img
                 src="./images/portfolio9.jpg"
                 alt="Growing Business"
                 class="cardset-img"
@@ -181,6 +201,7 @@
                 <h2 class="cardset-title">Growing Business</h2>
                 <p class="cardset-text">Приложение</p>
               </div>
+              </a>
             </li>
           </ul>
         </div>
