--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </ul>
         </nav>
 
-        <ul class="auth-nav list">
+        <ul class="auth-nav list"> 
           <li class="auth-nav-item">
              <a href="mailto:info@devstudio.com" class="auth-nav-link">
               <svg class="auth-nav-icon" width="16" height="12px"> 
@@ -71,9 +71,11 @@
           <h2 class="hidden">Преимущества</h2>
           <ul class="features-list list">
             <li class="features-item">
-              <svg class="features-icon"> 
-                <use href="./images/icon.svg#icon-antenna"></use>
-              </svg>
+              <div class="features-img">
+                <svg class="features-icon"> 
+                  <use href="./images/icon.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="features-title">Внимание к деталям</h3>
               <p class="features-text">
                 Идейные соображения, а также начало повседневной работы по
@@ -81,9 +83,11 @@
               </p>
             </li>
             <li class="features-item">
-              <svg class="features-icon"> 
-                <use href="./images/icon.svg#icon-clock"></use>
-              </svg>
+              <div class="features-img">
+                <svg class="features-icon"> 
+                  <use href="./images/icon.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="features-title">Пунктуальность</h3>
               <p class="features-text">
                 Задача организации, в особенности же рамки и место обучения
@@ -91,9 +95,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="features-img">
                 <svg class="features-icon"> 
                   <use href="./images/icon.svg#icon-diagram"></use>
                 </svg>
+              </div>
               <h3 class="features-title">Планирование</h3>
               <p class="features-text">
                 Равным образом консультация с широким активом в значительной
@@ -101,9 +107,11 @@
               </p>
             </li>
             <li class="features-item">
-              <svg class="features-icon"> 
-                <use href="./images/icon.svg#icon-astronaut"></use>
-              </svg>
+              <div class="features-img">
+                <svg class="features-icon"> 
+                  <use href="./images/icon.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="features-title">Современные технологии</h3>
               <p class="features-text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -144,150 +152,153 @@
               <div class="team-description">
                 <h3 class="team-title">Игорь Демьяненко</h3>
                 <p lang="en" class="team-text">Product Designer</p>
-              </div>
-            <ul class="social-media list"> 
+                <ul class="social-media list"> 
+                  <li>
+                    <a class="social-media-link">
+                      <svg class="social-media-icon"> 
+                        <use href="./images/icon.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li> 
+                    <a class="social-media-link">
+                      <svg class="social-media-icon"> 
+                        <use href="./images/icon.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                <li>
+                <a class="social-media-link">
+                  <svg class="social-media-icon"> 
+                    <use href="./images/icon.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+               </li>
               <li>
                 <a class="social-media-link">
                   <svg class="social-media-icon"> 
-                    <use href="./images/icon.svg#icon-instagram"></use>
+                    <use href="./images/icon.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
-              <li> 
-                <a class="social-media-link">
-                  <svg class="social-media-icon"> 
-                    <use href="./images/icon.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-            <li>
-            <a class="social-media-link">
-              <svg class="social-media-icon"> 
-                <use href="./images/icon.svg#icon-facebook"></use>
-              </svg>
-            </a>
-           </li>
-          <li>
-            <a class="social-media-link">
-              <svg class="social-media-icon"> 
-                <use href="./images/icon.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-            </ul>
+                </ul>
+              </div>
+
             </li>
             <li class="team-item">
               <img src="./images/team2.jpg" alt="Ольга Репина" width="270" />
               <div class="team-description">
                 <h3 class="team-title">Ольга Репина</h3>
                 <p lang="en" class="team-text">Frontend Developerr</p>
-              </div>
-              <ul class="social-media list"> 
+                <ul class="social-media list"> 
+                  <li>
+                    <a class="social-media-link">
+                      <svg class="social-media-icon"> 
+                        <use href="./images/icon.svg#icon-instagram" ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li> 
+                    <a class="social-media-link">
+                      <svg class="social-media-icon"> 
+                        <use href="./images/icon.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
                 <li>
-                  <a class="social-media-link">
-                    <svg class="social-media-icon"> 
-                      <use href="./images/icon.svg#icon-instagram" ></use>
-                    </svg>
-                  </a>
-                </li>
-                <li> 
-                  <a class="social-media-link">
-                    <svg class="social-media-icon"> 
-                      <use href="./images/icon.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                </li>
+                <a class="social-media-link">
+                  <svg class="social-media-icon"> 
+                    <use href="./images/icon.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+               </li>
               <li>
-              <a class="social-media-link">
-                <svg class="social-media-icon"> 
-                  <use href="./images/icon.svg#icon-facebook"></use>
-                </svg>
-              </a>
-             </li>
-            <li>
-              <a class="social-media-link">
-                <svg class="social-media-icon"> 
-                  <use href="./images/icon.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-              </ul>
+                <a class="social-media-link">
+                  <svg class="social-media-icon"> 
+                    <use href="./images/icon.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+                </ul>
+              </div>
+
             </li>
             <li class="team-item">
               <img src="./images/team3.jpg" alt="Николай Тарасов" width="270" />
               <div class="team-description">
                 <h3 class="team-title">Николай Тарасов</h3>
                 <p lang="en" class="team-text">Marketing</p>
-              </div>
-              <ul class="social-media list"> 
+                <ul class="social-media list"> 
+                  <li>
+                    <a class="social-media-link">
+                      <svg class="social-media-icon"> 
+                        <use href="./images/icon.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li> 
+                    <a class="social-media-link">
+                      <svg class="social-media-icon"> 
+                        <use href="./images/icon.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
                 <li>
-                  <a class="social-media-link">
-                    <svg class="social-media-icon"> 
-                      <use href="./images/icon.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li> 
-                  <a class="social-media-link">
-                    <svg class="social-media-icon"> 
-                      <use href="./images/icon.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                </li>
+                <a class="social-media-link">
+                  <svg class="social-media-icon"> 
+                    <use href="./images/icon.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+               </li>
               <li>
-              <a class="social-media-link">
-                <svg class="social-media-icon"> 
-                  <use href="./images/icon.svg#icon-facebook"></use>
-                </svg>
-              </a>
-             </li>
-            <li>
-              <a class="social-media-link">
-                <svg class="social-media-icon"> 
-                  <use href="./images/icon.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-              </ul>
+                <a class="social-media-link">
+                  <svg class="social-media-icon"> 
+                    <use href="./images/icon.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+                </ul>
+              </div>
+
             </li>
             <li class="team-item">
               <img src="./images/team4.jpg" alt="Михаил Ермаков" width="270" />
               <div class="team-description">
                 <h3 class="team-title">Михаил Ермаков</h3>
                 <p lang="en" class="team-text">UI Designer</p>
-              </div>
-              <ul class="social-media list"> 
+                <ul class="social-media list"> 
+                  <li>
+                    <a class="social-media-link">
+                      <svg class="social-media-icon"> 
+                        <use href="./images/icon.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li> 
+                    <a class="social-media-link">
+                      <svg class="social-media-icon"> 
+                        <use href="./images/icon.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
                 <li>
-                  <a class="social-media-link">
-                    <svg class="social-media-icon"> 
-                      <use href="./images/icon.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li> 
-                  <a class="social-media-link">
-                    <svg class="social-media-icon"> 
-                      <use href="./images/icon.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                </li>
+                <a class="social-media-link">
+                  <svg class="social-media-icon"> 
+                    <use href="./images/icon.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+               </li>
               <li>
-              <a class="social-media-link">
-                <svg class="social-media-icon"> 
-                  <use href="./images/icon.svg#icon-facebook"></use>
-                </svg>
-              </a>
-             </li>
-            <li>
-              <a class="social-media-link">
-                <svg class="social-media-icon"> 
-                  <use href="./images/icon.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-              </ul>
-            </li>
-          </ul>
+                <a class="social-media-link">
+                  <svg class="social-media-icon"> 
+                    <use href="./images/icon.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+                </ul>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
 
@@ -297,47 +308,47 @@
             Постоянные клиенты
           </h2>
           <ul class="clients-list list">
-            <li>
-              <button class="clients-button">
+            <li class="clients-item">
+              <a class="clients-link">
                 <svg class="clients-icon">
                   <use href="./images/icon.svg#icon-client1"></use>
                 </svg>
-              </button>
+              </a>
             </li>
-            <li>
-              <button class="clients-button">
+            <li class="clients-item">
+              <a class="clients-link">
                 <svg class="clients-icon">
                   <use href="./images/icon.svg#icon-client2"></use>
                 </svg>
-              </button>
+              </a>
             </li>
-            <li>
-              <button class="clients-button">
+            <li class="clients-item">
+              <a class="clients-link">
                 <svg class="clients-icon">
                   <use href="./images/icon.svg#icon-client3"></use>
                 </svg>
-              </button>
+              </a>
             </li>
-            <li>
-              <button class="clients-button">
+            <li class="clients-item">
+              <a class="clients-link">
                 <svg class="clients-icon">
                   <use href="./images/icon.svg#icon-client4"></use>
                 </svg>
-              </button>
+              </a>
             </li>
-            <li>
-              <button class="clients-button">
+            <li class="clients-item">
+              <a class="clients-link">
                 <svg class="clients-icon">
                   <use href="./images/icon.svg#icon-client5"></use>
                 </svg>
-              </button>
+              </a>
             </li>
-            <li>
-              <button class="clients-button">
+            <li class="clients-item">
+              <a class="clients-link">
                 <svg class="clients-icon">
                   <use href="./images/icon.svg#icon-client6"></use>
                 </svg>
-              </button>
+              </a>
             </li>
           </ul>
         </div>
