внесено всі правки+перевірено валідатором

--- a/portfolio.html
+++ b/portfolio.html
@@ -94,7 +94,7 @@
                 <p class="cardset-text">Веб-сайты</p>
               </div> </a>
             </li>
-            
+
             <li class="cardset-item">
               <a class=cardset-link>
                 <img
@@ -109,8 +109,8 @@
             </li>
 
             <li class="cardset-item">
-              <a class=cardset-link> </a>
-              <img
+              <a class=cardset-link> 
+                <img
                 src="./images/portfolio3.jpg"
                 alt="Ресторан Seafood"
                 class="cardset-img"
@@ -119,6 +119,7 @@
                 <h2 class="cardset-title">Ресторан Seafood</h2>
                 <p class="cardset-text">Приложение</p>
               </div>
+              </a>
             </li>
 
             <li class="cardset-item">
